--- a/package.json
+++ b/package.json
@@ -14,14 +14,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "51.0.20",
-    "expo-status-bar": "1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.3"
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-navigation/bottom-tabs": "^7.3.2",
+    "@react-navigation/native": "^7.0.18",
+    "@react-navigation/stack": "^7.1.2",
+    "date-fns": "^2.30.0",
+    "expo": "~52.0.38",
+    "expo-status-bar": "~2.0.1",
+    "react": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-calendars": "^1.1310.0",
+    "react-native-linking": "^0.0.0",
+    "react-native-maps": "^1.20.1"
   },
   "devDependencies": {
-    "@babel/core": "7.24.8",
-    "@types/react": "18.2.79",
+    "@babel/core": "^7.25.2",
+    "@types/react": "~18.3.12",
     "typescript": "5.3.3"
   },
   "private": true
