--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "sample-app",
-    "slug": "sample-app",
+    "name": "learn-react-native-nguyen",
+    "slug": "learn-react-native-nguyen",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
