--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "learn-react-native-hoidanit",
+  "name": "learn-react-native-nguyen",
   "author": {
-    "name": "Hỏi Dân IT",
+    "name": "Nguyen IT",
     "url": "https://hoidanit.vn"
   },
   "version": "1.0.0",
@@ -26,7 +26,7 @@
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1310.0",
     "react-native-linking": "^0.0.0",
-    "react-native-maps": "^1.20.1"
+    "react-native-maps": "^1.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
